# tmi-tf-wh

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README-example-script.md  README.md  WORKAROUND-auth-settings.md  create_and_analyze_example.py  create_and_analyze_example_cli.py  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
deploy/: tmi-tf-wh.service
infra/: .terraform.lock.hcl  api_gateway.tf  iam.tf  k8s.tf  networking.tf  ocir.tf  oke.tf  outputs.tf  queue.tf  terraform.tfvars.example  variables.tf  vault.tf  versions.tf
lambda-webhook/: .gitignore  DEPLOYMENT.md  LLM_PROVIDERS.md  QUICKSTART.md  README.md
prompts/: analysis_comparison_system.txt  analysis_comparison_user.txt  analysis_insights_system.txt  comparison_insights_system.txt  comparison_normalization_user.txt  dfd_generation_system.txt  dfd_generation_user.txt  infrastructure_analysis_system.txt  infrastructure_analysis_user.txt  inventory_system.txt  inventory_user.txt  security_analysis_system.txt  security_analysis_user.txt  terraform_analysis_system.txt  terraform_analysis_user.txt  terraform_dfd_generation.txt  threat_analysis_system.txt  threat_analysis_user.txt  threat_extraction_system.txt  threat_extraction_user.txt  threat_identification_system.txt  threat_identification_user.txt
scripts/: push-oci.sh
tests/: test_addon_callback.py  test_analyzer.py  test_cli_environment.py  test_config.py  test_cvss_scorer.py  test_diagram_builder.py  test_job.py  test_json_extract.py  test_llm_analyzer.py  test_llm_provider.py  test_markdown_generator.py  test_oci_llm_provider.py  test_providers.py  test_queue_client.py  test_repo_analyzer.py  test_retry.py  test_sanitizer.py  test_server.py  test_status_note.py  test_tf_validator.py  test_threat_processor.py  (+3 more)
(+124 files in other folders)
