[project]
name = "tmi-tf"
version = "0.1.0"
description = "Terraform infrastructure analysis tool for TMI threat models"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "python-dotenv>=1.0.0",
    "gitpython>=3.1.40",
    "requests>=2.31.0",
    "PyGithub>=2.1.1",
    # TMI client dependencies
    "certifi>=2024.2.2",
    "six>=1.16.0",
    "python-dateutil>=2.9.0",
    "setuptools>=82.0.0",
    "urllib3>=2.0.0",
    "google-auth>=2.45.0",
    "google-cloud-aiplatform>=1.132.0",
    "litellm>=1.80.11",
    "nh3>=0.3.3",
    "oci>=2.168.2",
]

[project.scripts]
tmi-tf = "tmi_tf.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.407",
]

[tool.pyright]
# tmi_client is added to sys.path at runtime from ~/Projects/tmi-clients/
# and cannot be resolved statically; imports are suppressed per-line
